README is updated.

--- a/README
+++ b/README
@@ -1,10 +1,9 @@
 Dr.Web pyavdesk
 ===============
 
-Dr.Web pyavdesk (python-avdesk) is a Python module, wrapping Dr.Web dwavdapi C library
-to introduce simple yet powerful interface to manipulatate Dr.Web AV-Desk server resources
-from within your Python code, making integration of thirdparty applications with AV-Desk
-as easy as possible.
+Dr.Web pyavdesk (python-avdesk) is a Python module, wrapping Dr.Web dwavdapi C library to introduce 
+simple yet powerful interface to manipulatate Dr.Web AV-Desk server resources from within your 
+Python code, making integration of thirdparty applications with AV-Desk as easy as possible.
 
 Internally pyavdesk uses `dwavdapi` library to make a dialog with AV-Desk server through its XML API.
 
@@ -19,7 +18,7 @@ Note: this command requires python-setuptools package to be installed in advance
 Documentation
 -------------
 
-API documentation is available in html format from `docs/build/html/` package directory.
+API documentation is available at https://drweb-pyavdesk.readthedocs.org/.
 
 Dr.Web pyavdesk uses python-sphinx for API documentation builds:
 use `make <build_format_name>` in `docs/` directory to build documentation from sources.
@@ -28,7 +27,7 @@ use `make <build_format_name>` in `docs/` directory to build documentation from 
 Copyright
 ---------
 
-Copyright (c) Doctor Web, Ltd., 2003-2012
+Copyright (c) Doctor Web, Ltd., 2003-2013
 
 Dr.Web pyavdesk is distributed under license available from LICENSE file shipped
 with this distribution package.
