--- a/README
+++ b/README
@@ -1,17 +1,18 @@
 Dr.Web pyavdesk
 ===============
 
-Dr.Web pyavdesk (python-avdesk) is a Python module, wrapping Dr.Web dwavdapi C library to introduce 
+**Dr.Web pyavdesk** (python-avdesk) is a Python module, wrapping **Dr.Web dwavdapi** C library to introduce 
 simple yet powerful interface to manipulate Dr.Web AV-Desk server resources from within your
 Python code, making integration of third-party applications with AV-Desk as easy as possible.
-
-Internally pyavdesk uses `dwavdapi` library to make a dialog with AV-Desk server through its XML API.
 
 
 Installation
 ------------
 
-Execute `> python setup.py install` from command line.
+Execute from command line:
+
+    > python setup.py install
+
 Note: this command requires python-setuptools package to be installed in advance.
 
 
@@ -33,6 +34,8 @@ Dr.Web pyavdesk is distributed under the license available from LICENSE file pro
 with the source code.
 
 
---
+----
+
 http://www.drweb.com
+
 http://www.av-desk.com
